# PixyProtocol

./: .gitignore  .gitmodules  README.md
riskless/: Cargo.toml  NOTICE  README.md
riskless/.devsetup/: setup.sh
riskless/artifacts/: checksums.txt  riskless.wasm  riskless_factory.wasm  riskless_project.wasm
riskless/contracts/riskless_factory/: Cargo.toml
riskless/contracts/riskless_factory/examples/: schema.rs
riskless/contracts/riskless_factory/schema/: execute_msg.json  instantiate_msg.json  project_contract_address_response.json  query_msg.json
riskless/contracts/riskless_factory/src/: contract.rs  error.rs  lib.rs  response.rs  state.rs
riskless/contracts/riskless_factory/test/: cliTesting.sh
riskless/contracts/riskless_project/: Cargo.toml  README.md
riskless/contracts/riskless_project/examples/: schema.rs
riskless/contracts/riskless_project/schema/: execute_msg.json  instantiate_msg.json  project_status_response.json  query_msg.json  user_balance_response.json
riskless/contracts/riskless_project/src/: anchor.rs  contract.rs  error.rs  lib.rs  state.rs
riskless/contracts/riskless_project/test/: cliTesting.sh
riskless/examples/: schema.rs
riskless/schema/: execute_msg.json  instantiate_msg.json  project_status_response.json  query_msg.json
riskless/src/: anchor.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs
riskless/test/: test_seq_1.sh
