[package]
name = "riskless-project"
version = "0.1.0"
authors = [
  "Poull Brien <book@bigeyestudios.com>", 
  "Jeff Holek <Jeff.holek@gmail.com>", 
  "Sumeet Mehra <sumeet.mehra@gmail.com>", 
  "Tieg Zaharia <tieg.zaharia@gmail.com>",
  "John Fantell <jfantell@icloud.com>",
]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
riskless = { path = "../../packages/riskless", default-features = false, version = "0.1.0"}
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
cw-storage-plus = "0.8.0"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
cw0 = { version = "0.8.0" }
cw-controllers = { version = "0.8.0" }
cw20 = {version = "0.8.1" }
cosmwasm-bignumber = {version = "2.2.0" }
terra-cosmwasm = { version = "2.2.0" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
